--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,16 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="Social Network of Short Story Writers & Essayists" />
+  <meta name="title" content="Taleguild | Social Network for Short Stories Writers & Essayists" />
+
+  <meta property="og:title" content="Taleguild | Social Network for Short Stories Writers & Essayists" />
+  <meta property="og:description" content="Social Network of Short Story Writers & Essayists" />
+  <meta property="og:image" content="%PUBLIC_URL%/taleguild-share.png" />
+
+  <meta property="twitter:title" content="Taleguild | Social Network for Short Stories Writers & Essayists" />
+  <meta property="twitter:description" content="Social Network of Short Story Writers & Essayists" />
+  <meta property="twitter:image" content="%PUBLIC_URL%/taleguild-logo.png" />
+
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/taleguild-logo.png" />
   <!--
       manifest.json provides metadata used when your web app is installed on a
