--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8" />
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="theme-color" content="#000000" />
+  <!-- <meta name="theme-color" content="#000000" /> -->
   <meta name="description" content="Social Network of Short Story Writers & Essayists" />
   <meta name="title" content="Taleguild | Social Network for Short Stories Writers & Essayists" />
 
@@ -15,9 +15,9 @@
 
   <meta property="twitter:title" content="Taleguild | Social Network for Short Stories Writers & Essayists" />
   <meta property="twitter:description" content="Social Network of Short Story Writers & Essayists" />
-  <meta property="twitter:image" content="%PUBLIC_URL%/taleguild-logo.png" />
+  <meta property="twitter:image" content="%PUBLIC_URL%/taleguild-share.png" />
 
-  <link rel="apple-touch-icon" href="%PUBLIC_URL%/taleguild-logo.png" />
+  <link rel="apple-touch-icon" href="%PUBLIC_URL%/taleguild-share.png" />
   <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
