added ssr in story routes

--- a/public/index.html
+++ b/public/index.html
@@ -6,15 +6,15 @@
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <!-- <meta name="theme-color" content="#000000" /> -->
-  <meta name="description" content="Social Network of Short Story Writers & Essayists" />
-  <meta name="title" content="Taleguild | Social Network for Short Stories Writers & Essayists" />
+  <meta name="description" content="__DESCRIPTION__" />
+  <meta name="title" content="__TITLE__" />
 
-  <meta property="og:title" content="Taleguild | Social Network for Short Stories Writers & Essayists" />
-  <meta property="og:description" content="Social Network of Short Story Writers & Essayists" />
+  <meta property="og:title" content="__TITLE__" />
+  <meta property="og:description" content="__DESCRIPTION__" />
   <meta property="og:image" content="%PUBLIC_URL%/taleguild-share.png" />
 
-  <meta property="twitter:title" content="Taleguild | Social Network for Short Stories Writers & Essayists" />
-  <meta property="twitter:description" content="Social Network of Short Story Writers & Essayists" />
+  <meta property="twitter:title" content="__TITLE__" />
+  <meta property="twitter:description" content="__DESCRIPTION__" />
   <meta property="twitter:image" content="%PUBLIC_URL%/taleguild-share.png" />
 
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/taleguild-share.png" />
