--- a/public/index.html
+++ b/public/index.html
@@ -11,13 +11,13 @@
 
   <meta property="og:title" content="__TITLE__" />
   <meta property="og:description" content="__DESCRIPTION__" />
-  <meta property="og:image" content="%PUBLIC_URL%/taleguild-share.png" />
+  <meta property="og:image" content="__IMAGE_URL__" />
 
   <meta property="twitter:title" content="__TITLE__" />
   <meta property="twitter:description" content="__DESCRIPTION__" />
-  <meta property="twitter:image" content="%PUBLIC_URL%/taleguild-share.png" />
+  <meta property="twitter:image" content="__IMAGE_URL__" />
 
-  <link rel="apple-touch-icon" href="%PUBLIC_URL%/taleguild-share.png" />
+  <link rel="apple-touch-icon" href="__IMAGE_URL__" />
   <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
