--- a/public/index.html
+++ b/public/index.html
@@ -12,10 +12,14 @@
   <meta property="og:title" content="__TITLE__" />
   <meta property="og:description" content="__DESCRIPTION__" />
   <meta property="og:image" content="__IMAGE_URL__" />
+  <meta property="og:image:width" content="1280" />
+  <meta property="og:image:height" content="720" />
 
-  <meta property="twitter:title" content="__TITLE__" />
-  <meta property="twitter:description" content="__DESCRIPTION__" />
-  <meta property="twitter:image" content="__IMAGE_URL__" />
+  <meta name="twitter:title" content="__TITLE__" />
+  <meta name="twitter:description" content="__DESCRIPTION__" />
+  <meta name="twitter:image" content="__IMAGE_URL__" />
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:image:alt" content="Preview image" />
 
   <link rel="apple-touch-icon" href="__IMAGE_URL__" />
   <!--
