--- a/public/index.html
+++ b/public/index.html
@@ -36,7 +36,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-  <title>Taleguild | Social Network for Short Stories Writers & Essayists</title>
+  <title>__TITLE__</title>
 </head>
 
 <body>
