--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,9 @@
   <meta property="og:image" content="__IMAGE_URL__" />
   <meta property="og:image:width" content="1280" />
   <meta property="og:image:height" content="720" />
+  <meta property="og:image:alt" content="Preview image" />
+  <meta property="og:site_name" content="Taleguild" />
+  <meta property="og:type" content="website" />
 
   <meta name="twitter:title" content="__TITLE__" />
   <meta name="twitter:description" content="__DESCRIPTION__" />
