--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8" />
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <!-- <meta name="theme-color" content="#000000" /> -->
+  <meta name="theme-color" content="#000000" />
   <meta name="description" content="__DESCRIPTION__" />
   <meta name="title" content="__TITLE__" />
 
