async helet added

--- a/public/index.html
+++ b/public/index.html
@@ -6,22 +6,22 @@
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
-  <meta name="description" content="Social Network of Short Story Writers & Essayists" data-react-helmet="true"/>
-  <meta name="title" content="Taleguild | Social Network for Short Stories Writers & Essayists" data-react-helmet="true"/>
+  <meta name="description" content="Social Network of Short Story Writers & Essayists" />
+  <meta name="title" content="Taleguild | Social Network for Short Stories Writers & Essayists" />
 
-  <meta property="og:title" content="Taleguild | Social Network for Short Stories Writers & Essayists" data-react-helmet="true"/>
-  <meta property="og:description" content="Social Network of Short Story Writers & Essayists" data-react-helmet="true"/>
-  <meta property="og:image" content="%PUBLIC_URL%/taleguild-share.png" data-react-helmet="true"/>
-  <meta property="og:image:width" content="1280" data-react-helmet="true"/>
-  <meta property="og:image:height" content="720" data-react-helmet="true"/>
+  <meta property="og:title" content="Taleguild | Social Network for Short Stories Writers & Essayists" />
+  <meta property="og:description" content="Social Network of Short Story Writers & Essayists" />
+  <meta property="og:image" content="%PUBLIC_URL%/taleguild-share.png" />
+  <meta property="og:image:width" content="1280" />
+  <meta property="og:image:height" content="720" />
 
-  <meta name="twitter:title" content="Taleguild | Social Network for Short Stories Writers & Essayists" data-react-helmet="true"/>
-  <meta name="twitter:description" content="Social Network of Short Story Writers & Essayists" data-react-helmet="true"/>
-  <meta name="twitter:image" content="%PUBLIC_URL%/taleguild-share.png" data-react-helmet="true"/>
-  <meta name="twitter:card" content="summary_large_image" data-react-helmet="true"/>
-  <meta name="twitter:image:alt" content="Preview image" data-react-helmet="true"/>
+  <meta name="twitter:title" content="Taleguild | Social Network for Short Stories Writers & Essayists" />
+  <meta name="twitter:description" content="Social Network of Short Story Writers & Essayists" />
+  <meta name="twitter:image" content="%PUBLIC_URL%/taleguild-share.png" />
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:image:alt" content="Preview image" />
 
-  <link rel="apple-touch-icon" href="%PUBLIC_URL%/taleguild-share.png" data-react-helmet="true"/>
+  <link rel="apple-touch-icon" href="%PUBLIC_URL%/taleguild-share.png" />
   <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
