--- a/public/index.html
+++ b/public/index.html
@@ -5,26 +5,23 @@
   <meta charset="utf-8" />
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <!-- <meta name="theme-color" content="#000000" /> -->
-  <meta name="description" content="__DESCRIPTION__" />
-  <meta name="title" content="__TITLE__" />
+  <meta name="theme-color" content="#000000" />
+  <meta name="description" content="Social Network of Short Story Writers & Essayists" />
+  <meta name="title" content="Taleguild | Social Network for Short Stories Writers & Essayists" />
 
-  <meta property="og:title" content="__TITLE__" />
-  <meta property="og:description" content="__DESCRIPTION__" />
-  <meta property="og:image" content="__IMAGE_URL__" />
+  <meta property="og:title" content="Taleguild | Social Network for Short Stories Writers & Essayists" />
+  <meta property="og:description" content="Social Network of Short Story Writers & Essayists" />
+  <meta property="og:image" content="%PUBLIC_URL%/taleguild-share.png" />
   <meta property="og:image:width" content="1280" />
   <meta property="og:image:height" content="720" />
-  <meta property="og:image:alt" content="Preview image" />
-  <meta property="og:site_name" content="Taleguild" />
-  <meta property="og:type" content="website" />
 
-  <meta name="twitter:title" content="__TITLE__" />
-  <meta name="twitter:description" content="__DESCRIPTION__" />
-  <meta name="twitter:image" content="__IMAGE_URL__" />
+  <meta name="twitter:title" content="Taleguild | Social Network for Short Stories Writers & Essayists" />
+  <meta name="twitter:description" content="Social Network of Short Story Writers & Essayists" />
+  <meta name="twitter:image" content="%PUBLIC_URL%/taleguild-share.png" />
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:image:alt" content="Preview image" />
 
-  <link rel="apple-touch-icon" href="__IMAGE_URL__" />
+  <link rel="apple-touch-icon" href="%PUBLIC_URL%/taleguild-share.png" />
   <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -39,7 +36,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-  <title>__TITLE__</title>
+  <title>Taleguild | Social Network for Short Stories Writers & Essayists</title>
 </head>
 
 <body>
