--- a/public/index.html
+++ b/public/index.html
@@ -4,8 +4,24 @@
 <head>
   <meta charset="utf-8" />
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="theme-color" content="#000000" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" data-react-helmet="true" />
+  <meta name="theme-color" content="#000000" data-react-helmet="true" />
+  <meta name="description" content="__DESCRIPTION__" data-react-helmet="true" />
+  <meta name="title" content="__TITLE__" data-react-helmet="true" />
+
+  <meta property="og:title" content="__TITLE__" data-react-helmet="true" />
+  <meta property="og:description" content="__DESCRIPTION__" data-react-helmet="true" />
+  <meta property="og:image" content="__IMAGE_URL__" data-react-helmet="true" />
+  <meta property="og:image:width" content="1280" />
+  <meta property="og:image:height" content="720" />
+
+  <meta name="twitter:title" content="__TITLE__" data-react-helmet="true" />
+  <meta name="twitter:description" content="__DESCRIPTION__" data-react-helmet="true" />
+  <meta name="twitter:image" content="__IMAGE_URL__" data-react-helmet="true" />
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:image:alt" content="Preview image" />
+
+  <link rel="apple-touch-icon" href="__IMAGE_URL__" data-react-helmet="true"/>
   <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -20,7 +36,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-  <title>Taleguild | Social Network for Short Stories Writers & Essayists</title>
+  <title>__TITLE__</title>
 </head>
 
 <body>
