--- a/public/index.html
+++ b/public/index.html
@@ -6,17 +6,17 @@
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
-  <meta name="description" content="__DESCRIPTION__" />
-  <meta name="title" content="__TITLE__" />
+  <meta name="description" content="__DESCRIPTION__" data-react-helmet="true"/>
+  <meta name="title" content="__TITLE__" data-react-helmet="true"/>
 
-  <meta property="og:title" content="__TITLE__" />
-  <meta property="og:description" content="__DESCRIPTION__" />
+  <meta property="og:title" content="__TITLE__" data-react-helmet="true"/>
+  <meta property="og:description" content="__DESCRIPTION__" data-react-helmet="true"/>
   <meta property="og:image" content="__IMAGE_URL__" />
   <meta property="og:image:width" content="1280" />
   <meta property="og:image:height" content="720" />
 
-  <meta name="twitter:title" content="__TITLE__" />
-  <meta name="twitter:description" content="__DESCRIPTION__" />
+  <meta name="twitter:title" content="__TITLE__" data-react-helmet="true"/>
+  <meta name="twitter:description" content="__DESCRIPTION__" data-react-helmet="true"/>
   <meta name="twitter:image" content="__IMAGE_URL__" />
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:image:alt" content="Preview image" />
@@ -36,7 +36,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-  <title>__TITLE__</title>
+  <title data-react-helmet="true">__TITLE__</title>
 </head>
 
 <body>
