[index.html]: added keywords meta

--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
   <meta name="theme-color" content="#000000">
   <meta name="description" content="__DESCRIPTION__" data-react-helmet="true">
   <meta name="title" content="__TITLE__" data-react-helmet="true">
+  <meta name="keywords" content="writing, writer, app, stories, story, short story">
 
   <meta property="og:title" content="__TITLE__" data-react-helmet="true">
   <meta property="og:description" content="__DESCRIPTION__" data-react-helmet="true">
